singleion modified to allow sipf filenames in other directories and store results in results as usual

--- a/doc/phonon.tex
+++ b/doc/phonon.tex
@@ -410,7 +410,7 @@ c^{44}&=&c^{2323} \nonumber \\
 \end{eqnarray}
 
 There are 21 independent elastic constants, $c^{\alpha\beta}$ with $\beta=1,...,6$ and
-$\alpha \le \beta$. The other 60 elastic constants 
+$\alpha \le \beta$ (or less, see  http://koski.ucdavis.edu/BRILLOUIN/CRYSTALS/Elasticities.html). The other 60 elastic constants 
 can be obtained from the symmetry relations $c^{\alpha\beta}=c^{\beta\alpha}$, 
 $c^{\alpha\beta\gamma\delta}=c^{\beta\alpha\gamma\delta}=c^{\alpha\beta\delta\gamma}$.
 
