addj comment change

--- a/doc/fitting.tex
+++ b/doc/fitting.tex
@@ -248,6 +248,7 @@ by the command (in the example you should go to the directory {\prg /mcphas/exam
 The ''10'' in the command means that the initial statistical
 ''temperature'' of the algorithm
 is set to 10.  
+\item option -l 0.2 ... sets limit - program will end if $sta<0.2$
 \item Option -t sets time limit until program end (in seconds).
 \item Option -s gives maximal number of iteration steps to be done.
 \item Option -n allows to store every 200 steps the parametersets in a table in  {\prg results/simannfit.0}.
