mcdiff compatible with cf-phonon calculations

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -43,18 +43,12 @@
  \vspace{2cm}
  \\ \today}
 
-\author{M. Rotter\thanks{Independent international Scientific Consultant, email: martin\_rotter@mcphase.de}, \and
-Duc Manh Le \thanks{Dept. Physics and Astronomy, Seoul National University, Seoul 151-742, Korea}
+\author{M. Rotter\thanks{Independent international Scientific Consultant, email: martin\_rotter@mcphase.de}, 
+\and Duc Manh Le \thanks{Dept. Physics and Astronomy, Seoul National University, Seoul 151-742, Korea}
 \and Joachim Keller \thanks{Universit\"at Regensburg}
-\and Lucian G Pascut,~Till Hoffmann 
-\thanks{University of Oxford, Physics Department, Clarendon Laboratory, Parks Road, Oxford, UK},
-\and
- M. Doerr,~R. Schedler\thanks{Institut f\"ur Festk\"orperhysik, Technische Universit\"at Dresden, D-01062 Dresden, Germany},
-\and
-P. Fabi n\'e Hoffmann\thanks{Forschungszentrum J\"ulich, D-52425 J\"ulich, Germany},
-\and S. Rotter \thanks{Wien, Austria},
-\and M. Banks \thanks{Max Planck Institute, Stuttgart, Germany}
-\and N. Kl\"uver \thanks{Gymnasium Dresden-Cotta}
+\and Till Hoffmann  \thanks{University of Oxford, Physics Department, Clarendon Laboratory, Parks Road, Oxford, UK},
+\and P. Fabi n\'e Hoffmann\thanks{Forschungszentrum J\"ulich, D-52425 J\"ulich, Germany},
+\and S. Rotter \thanks{Wien, Austria}
 }
 
 
@@ -67,7 +61,8 @@ We would like to thank colleagues who generously agreed to read sections of the 
 of the text; their comments helped to improve the text substantially. We are particularly indebted to
 Ulrike Witte, Jane Brown, M. Loewenhaupt, J.Jensen, A. Kreyssig, E. Faulhaber,
 J. Blanco, M. Haverkort, A. Severing,
-A. Doenni, H. Kitazawa, R. Kremer, A. Tanaka 
+A. Doenni, H. Kitazawa, R. Kremer, A. Tanaka, N. Kl\"uver, 
+M.Banks, N. Tang, Lucian G Pascut, M. Doerr, R. Schedler, A. Devashibhai
  and Andrew Boothroyd for their help and inspiring comments.
 
 The authors thank the FWF, Royal Society and the EPSRC.
