snprintf introduced bug in anisotropy.c for -r sipffile option reading Hxc removed

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -480,6 +480,8 @@ given by th parametrisation in file.sipf.
                          reducing (removing entries) or increasing (by filling with zeroes) 
                          the exchange parameter tables
 \item[Option:  -ni ] forces output without indexchange 
+\item[Option: -delatoms 1,2,5,7 ]  instead of removing atoms connected by a lattice vector 
+ 			remove atoms number 1,2,5 and 7 from the list and also all interactions with those 
 \end{description}
 \item [\prg rotateBlm\index{rotateBlm}]
   \begin{verbatim}
