--- a/doc/phonon.tex
+++ b/doc/phonon.tex
@@ -216,7 +216,7 @@ Here some formulas are listed. Starting point is the phonon part,
 
 
  The index $i$ now denotes all atomic
-positions in a crystal, the momentum vector is $\vec p_i$ and  the
+positions in a crystal, the momentum vector is $a_0 \vec p_i$ and  the
 displacement vector is $\vec U_i$. Fig.~\ref{figbvk} shows the Born-van-Karman
 model definition of longitudinal springs $c_L$ and transversal
 springs $c_T$ used in the following derivation.
